# kubevoip-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  sync-platform-api.yaml  test.yaml
src/kubevoip_cli/: __init__.py  builders.py  discovery.py  helm.py  kube.py  main.py  render.py  schema.py
tests/: test_cli.py  test_schema.py
tests/fixtures/: platform-crds.yaml
